add personal care page & add global header

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
 <div class='header'></div>
 <div id="container">
-    <div class="page page0">
+    <div class="page page0 background-image-center">
         <div class="title">
             <div>Natural Care in New Zealand</div>
             <div>designed to make your life better</div>
         </div>
         <div class="line">--------------</div>
-        <div class="more">View more about us</div>
+        <div class="more">View more about us ▶</div>
         <img class="sculpt" width="500" src="./img/P0/sculpt.png">
     </div>
     <!-- page1 -->
@@ -49,6 +49,7 @@
         var header = new Header('.header', null);
         header.initCur(0)
         window.header = header;
+
         $('body').animate({'opacity': 1});
     })
 </script>
