add page0 lines

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>肌秘官方网站</title>
+    <title>pureality</title>
     <style></style>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/pages.css" />
@@ -17,8 +17,11 @@
             <div>Natural Care in New Zealand</div>
             <div>designed to make your life better</div>
         </div>
-        <div class="line">--------------</div>
-        <div class="more">View more about us ▶</div>
+        <div class="line">
+            <div class="line1"></div>
+            <div class="line2"></div>
+        </div>
+        <div class="more">View more about us <span style="font-size: 10px"> ▶</span></div>
         <img class="sculpt" width="500" src="./img/P0/sculpt.png">
     </div>
     <!-- page1 -->
