--- a/personal-care.html
+++ b/personal-care.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>肌秘官方网站</title>
+    <title>pureality</title>
     <style></style>
     <link rel="stylesheet" href="css/main.css" />
 </head>
