--- a/index.html
+++ b/index.html
@@ -21,11 +21,28 @@
             <div class="line1"></div>
             <div class="line2"></div>
         </div>
-        <div class="more">View more about us <span style="font-size: 10px"> ▶</span></div>
+        <div class="more">
+            View more about us
+            <span class="arrow">▶</span>
+        </div>
         <img class="sculpt" width="500" src="./img/P0/sculpt.png">
     </div>
-    <!-- page1 -->
-    <div class="page page1"></div>
+
+    <div class="page page1 background-image-center">
+        <div class="title">
+            <div>Designed in New Zealand</div>
+            <div>Specially for safe personal care</div>
+        </div>
+        <div class="line">
+            <div class="line1"></div>
+            <div class="line2"></div>
+        </div>
+        <div class="more">
+            VIEW ALL PUREALITY
+            <span class="arrow">▶</span>
+        </div>
+        <img class="sculpt" width="800" src="./img/P1/sculpt.png">
+    </div>
     <div class="page page2"></div>
     <div class="page page3"></div>
 </div>
