--- a/personal-care.html
+++ b/personal-care.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+          content="user-scalable=no">
+    <!--content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"-->
     <title>pureality</title>
     <style></style>
     <link rel="stylesheet" href="css/main.css" />
@@ -19,7 +20,7 @@
 <script>
     $(function () {
         var header = new Header('.header', null);
-        header.initCur(2)
+        header.initCur(1)
         window.header = header;
 
         $('body').animate({'opacity': 1});
