add product page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <!--content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"-->
 
     <title>pureality</title>
-    <style></style>
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/pages.css" />
+    <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
 <div class='header'></div>
@@ -81,7 +80,6 @@
 <script src='js/tool/velocity.ui.js'></script>
 <script src='js/module/header.js'></script>
 <script src='js/index/index.js'></script>
-<!--轮播整个框架 和出场入场有关的代码-->
 <script>
     window.addEventListener('load', function () {
         var header = new Header('.header', null);
