--- a/skin-care.html
+++ b/skin-care.html
@@ -12,7 +12,7 @@
 <body>
 <div class='header'></div>
 <div class="innerC">
-    <img src="img/contact-us-all.jpg" width="100%">
+    <img src="img/skin-care-all.jpg" width="100%">
 </div>
 
 <script src='js/tool/jquery-1.8.3.min.js'></script>
@@ -20,7 +20,7 @@
 <script>
     window.addEventListener('load', function () {
         var header = new Header('.header', null);
-        header.initCur(4);
+        header.initCur(3);
         $('body').animate({'opacity': 1});
     })
 </script>
