--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
 <div class='header'></div>
 <div class="innerC">
     <img src="img/about-us-all.jpg" width="100%">
-    <iframe height=498 width='100%' src='http://player.youku.com/embed/XNDE0MDY1MTUzNg==' frameborder=0 allowfullscreen></iframe>
+    <iframe height=498 width='100%' src='https://player.youku.com/embed/XNDE0MDY1MTUzNg==' frameborder=0 allowfullscreen></iframe>
 </div>
 
 <script src='js/tool/jquery-1.8.3.min.js'></script>
